# saola

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_STATUS.md  LICENSE  PRISMA_TS_REFERENCE.md  README.md  dev.db  plan.md
example-app/: Cargo.toml  README.md  schema.prisma
example-app/migrations/20260413032018_first/: migration.sql
example-app/migrations/20260414024227_new/: migration.sql
example-app/migrations/20260416070521/: migration.sql
example-app/migrations/20260417041141_hello/: migration.sql
example-app/src/: main.rs  prisma.rs  tests.rs
example-app/src/saola/: enums.rs  mod.rs
example-app/src/saola/post_dir/: builders.rs  mod.rs  model.rs
example-app/src/saola/profile_dir/: builders.rs  mod.rs  model.rs
example-app/src/saola/user_dir/: builders.rs  mod.rs  model.rs
libs/build-utils/: Cargo.toml
libs/crosstarget-utils/: Cargo.toml
libs/metrics/: Cargo.toml
libs/mongodb-client/: Cargo.toml
libs/panic-utils/: Cargo.toml
libs/prisma-value/: Cargo.toml
libs/prisma-value/src/: lib.rs
libs/query-engine-common/: Cargo.toml
libs/query-template/: Cargo.toml
libs/sql-ddl/: Cargo.toml
libs/telemetry/: Cargo.toml
libs/test-macros/: Cargo.toml
libs/test-setup/: Cargo.toml
libs/user-facing-error-macros/: Cargo.toml
libs/user-facing-errors/: Cargo.toml
prisma-cli/: Cargo.toml
prisma-cli/src/: main.rs
prisma-cli/src/codegen/: mod.rs
prisma-core/: Cargo.toml
prisma-core/src/: builders.rs  lib.rs
prisma-macros/: Cargo.toml
prisma-macros/src/: as_macro.rs  builder_gen.rs  codegen.rs  codegen_orchestrator.rs  lib.rs  model_analysis.rs  model_gen.rs  query_gen.rs  relation_gen.rs  select_macro.rs  utils.rs  wrapper_gen.rs
prisma-macros/src/codegen/: builders.rs  enums.rs  filters.rs  include.rs  mod.rs  returns.rs  select.rs
prisma-schema/: Cargo.toml
prisma-schema/src/: lib.rs  parser.rs
prisma_core/: Cargo.toml
prisma_core/src/: aggregate.rs  builder.rs  client.rs  filter_builders.rs  filters.rs  legacy_read.rs  legacy_write.rs  lib.rs  prelude.rs  read.rs  transaction.rs  write.rs
psl-official/diagnostics/: Cargo.toml
psl-official/parser-database/: Cargo.toml
psl-official/prisma-value/: Cargo.toml
psl-official/psl/: Cargo.toml
psl-official/psl-core/: Cargo.toml
psl-official/psl/tests/: reformat_tests.rs  validation_tests.rs
psl-official/psl/tests/attributes/: builtin_attributes.rs  composite_index.rs  constraint_names_positive.rs  default_composite_positive.rs  default_positive.rs  id_positive.rs  ignore_positive.rs  index_clustering.rs  index_positive.rs  map_positive.rs  postgres_indices.rs  unique_positive.rs  updated_at_positive.rs
psl-official/psl/tests/attributes/postgres_indices/: brin.rs  cockroachdb.rs  gin.rs  gist.rs  spgist.rs
psl-official/psl/tests/attributes/relations/: referential_actions.rs  relations_positive.rs
psl-official/psl/tests/base/: array_sugar.rs  base_types.rs  basic.rs  comments.rs  duplicates.rs
psl-official/psl/tests/common/: asserts.rs  mod.rs
psl-official/psl/tests/config/: datasources.rs  generators.rs  nice_warnings.rs  sources.rs
psl-official/psl/tests/functions/: functionals_environment.rs  server_side_functions.rs  string_interpolation.rs
psl-official/psl/tests/multi_file/: basic.rs
psl-official/psl/tests/parsing/: literals.rs  models.rs
psl-official/psl/tests/reformat/: reformat.rs
psl-official/psl/tests/types/: cockroachdb_native_types.rs  extensions.rs  mongo_native_types.rs  mssql_native_types.rs  positive.rs  postgres_native_types.rs
psl-official/schema-ast/: Cargo.toml
quaint/: Cargo.toml
quaint/quaint-test-macros/: Cargo.toml
quaint/quaint-test-setup/: Cargo.toml
quaint/src/: lib.rs
query-engine/connectors/mongodb-query-connector/: Cargo.toml
query-engine/connectors/mongodb-query-connector/src/: lib.rs  metrics.rs  telemetry.rs
query-engine/connectors/mongodb-query-connector/src/interface/: connection.rs  transaction.rs
query-engine/connectors/mongodb-query-connector/src/root_queries/: mod.rs
query-engine/core/: Cargo.toml
query-engine/core/src/: lib.rs  telemetry.rs
query-engine/core/src/executor/: execute_operation.rs  interpreting_executor.rs  mod.rs  pipeline.rs
query-engine/core/src/interactive_transactions/: manager.rs  mod.rs  transaction.rs
query-engine/core/src/interpreter/: interpreter_impl.rs
query-engine/core/src/interpreter/query_interpreters/: nested_read.rs  read.rs  write.rs
query-engine/core/src/query_document/: selection.rs
query-engine/core/src/query_graph_builder/: error.rs
query-engine/dmmf/: Cargo.toml
query-engine/query-builders/query-builder/: Cargo.toml
query-engine/query-builders/sql-query-builder/: Cargo.toml
query-engine/query-builders/sql-query-builder/src/: context.rs  lib.rs  sql_trace.rs  telemetry.rs
query-engine/query-structure/: Cargo.toml
query-engine/query-structure/src/: default_value.rs  lib.rs  telemetry.rs
query-engine/query-structure/tests/: datamodel_converter_tests.rs
query-engine/schema/: Cargo.toml
query-engine/schema/benches/: schema_builder_bench.rs
query-engine/schema/examples/: schema_builder_build_odoo.rs
saola-cli/: Cargo.toml
saola-cli/src/: main.rs
saola-cli/src/codegen/: mod.rs
saola-codegen/: Cargo.toml
saola-codegen/src/: builder_gen.rs  lib.rs  model_analysis.rs  model_gen.rs  query_gen.rs  utils.rs  wrapper_gen.rs
saola-core/: Cargo.toml
saola-core/src/: aggregate.rs  builder.rs  client.rs  error.rs  filter_builders.rs  filters.rs  lib.rs  macros.rs  prelude.rs  read.rs  transaction.rs  write.rs
saola-macros/: Cargo.toml
saola-macros/src/: as_macro.rs  builder_gen.rs  codegen_orchestrator.rs  lib.rs  model_analysis.rs  model_gen.rs  query_gen.rs  select_macro.rs  wrapper_gen.rs
saola-schema/: Cargo.toml
saola-schema/src/: parser.rs
schema-engine/commands/: Cargo.toml
schema-engine/core/: Cargo.toml
schema-engine/datamodel-renderer/: Cargo.toml
schema-engine/json-rpc-api/: Cargo.toml
schema-engine/mongodb-schema-describer/: Cargo.toml
schema-engine/sql-schema-describer/: Cargo.toml
(+29 files in other folders)
