[package]
name = "example-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
saola-core = { path = "../saola-core", features = ["sqlite"] }
saola-macros = { path = "../saola-macros", features = ["sqlite"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
