[package]
name = "prisma-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
prisma-schema = { path = "../prisma-schema" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
schema-ast = { workspace = true }
parser-database = { workspace = true }
heck = { workspace = true }
