[package]
name = "prisma-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
psl = { workspace = true }
prisma_core = { path = "../prisma_core" }
prisma-schema = { path = "../prisma-schema" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2.0", features = ["full", "extra-traits"] }
schema-ast = { workspace = true }
parser-database = { workspace = true }
heck = { workspace = true }
