[package]
name = "saola-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
heck = { workspace = true }
saola-schema = { workspace = true }
psl = { workspace = true }
schema-ast = { workspace = true }
diagnostics = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
parser-database = { workspace = true }
prettyplease = "0.2"
