[package]
name = "saola-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
indexmap = { workspace = true }
schema = { workspace = true }
query-core = { workspace = true }
query-connector = { workspace = true }
sql-query-connector = { workspace = true, default-features = false, optional = true }
mongodb-query-connector = { workspace = true, default-features = false, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
psl = { workspace = true }
query-structure = { workspace = true }
chrono = { workspace = true }

[features]
default = ["sqlite"] # SQLite as default for easy getting started
postgresql = ["dep:sql-query-connector",  "sql-query-connector/postgresql-native",  "psl/postgresql"]
mysql = ["dep:sql-query-connector",  "sql-query-connector/mysql-native",  "psl/mysql"]
sqlite = ["dep:sql-query-connector",  "sql-query-connector/sqlite-native",  "psl/sqlite"]
mssql = ["dep:sql-query-connector",  "sql-query-connector/mssql-native",  "psl/mssql"]
mongodb = ["dep:mongodb-query-connector", "psl/mongodb"]
cockroachdb = ["postgresql", "psl/cockroachdb"]
full = ["postgresql", "mysql", "sqlite", "mssql", "mongodb", "cockroachdb", "telemetry", "metrics"]

telemetry = ["query-core/telemetry", "sql-query-connector?/telemetry"]
metrics = ["query-core/metrics", "sql-query-connector?/metrics"]

