[package]
name = "saola-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
psl = { workspace = true }
saola-core = { path = "../saola-core" }
saola-schema = { path = "../saola-schema" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2.0", features = ["full", "extra-traits"] }
schema-ast = { workspace = true }
parser-database = { workspace = true }
heck = { workspace = true }
