[package]
name = "saola-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
psl = { workspace = true, default-features = false }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { version = "2.0", features = ["full", "extra-traits"] }
schema-ast = { workspace = true }
heck = { workspace = true }

[features]
default = []
sqlite = ["psl/sqlite"]
postgresql = ["psl/postgresql"]
mysql = ["psl/mysql"]
mssql = ["psl/mssql"]
mongodb = ["psl/mongodb"]
cockroachdb = ["psl/cockroachdb"]
