[package]
name = "saola-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
psl = { workspace = true }
psl-core = { workspace = true }
schema-ast = { workspace = true }
parser-database = { workspace = true }
diagnostics = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
postgresql = ["psl-core/postgresql"]
mysql = ["psl-core/mysql"]
sqlite = ["psl-core/sqlite"]
mssql = ["psl-core/mssql"]
mongodb = ["psl-core/mongodb"]
cockroachdb = ["psl-core/cockroachdb"]
