[package]
name = "saola-crosstarget-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform target utilities for Saola ORM"
keywords = ["cross-platform", "utils", "target", "orm"]

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
enumflags2.workspace = true
futures.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
pin-project.workspace = true
chrono = { workspace = true, features = ["wasmbind"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
regex.workspace = true
chrono = { workspace = true }
