[package]
name = "saola-panic-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Panic handling utilities for Saola ORM"
keywords = ["panic", "error", "utils", "orm"]

[dependencies]

[lints]
workspace = true
