[package]
edition.workspace = true
name = "saola-prisma-value"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Prisma value types and serialization for the Saola ORM"
keywords = ["prisma", "value", "types", "orm", "serialization"]

[dependencies]
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
bigdecimal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde"] }
