[package]
name = "saola-user-facing-error-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for user-facing error generation in Saola ORM"
keywords = ["macros", "errors", "proc-macro", "orm"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
