[package]
name = "saola-diagnostics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Diagnostic utilities for Prisma Schema Language parsing"
keywords = ["diagnostics", "prisma", "schema", "error", "reporting"]

[dependencies]
colored.workspace = true
pest.workspace = true
indoc.workspace = true
