[package]
name = "saola-parser-database"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser database for Prisma Schema Language - Saola ORM"
keywords = ["prisma", "schema", "parser", "orm", "database"]

[dependencies]
diagnostics.workspace = true
schema-ast.workspace = true
indexmap.workspace = true
enumflags2.workspace = true
itertools.workspace = true
either.workspace = true
rustc-hash.workspace = true
