[package]
name = "saola-schema-ast"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Abstract Syntax Tree representation for Prisma Schema Language"
keywords = ["prisma", "schema", "ast", "parser", "orm"]

[dependencies]
diagnostics.workspace = true

pest.workspace = true
pest_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
