[package]
edition.workspace = true
name = "saola-query-core"
version = "0.1.0"

[features]
metrics = ["dep:prisma-metrics"]
telemetry = ["dep:telemetry", "dep:tracing-subscriber", "dep:tracing-futures"]
graphql-protocol = []

[dependencies]
async-trait.workspace = true
bigdecimal.workspace = true
bon.workspace = true
chrono.workspace = true
connection-string.workspace = true
connector = { path = "../connectors/query-connector", package = "saola-query-connector", version = "0.1.0" }
crossbeam-channel.workspace = true
psl.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
petgraph.workspace = true
query-builder.workspace = true
sql-query-builder.workspace = true
query-structure = { workspace = true, features = [
    "default_generators",
] }
prisma-metrics = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-futures = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
user-facing-errors.workspace = true
uuid.workspace = true
cuid2.workspace = true
ulid.workspace = true
schema.workspace = true
crosstarget-utils.workspace = true
telemetry = { workspace = true, optional = true }
lru.workspace = true
enumflags2.workspace = true
derive_more.workspace = true
