[package]
name = "saola-dmmf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data Model Meta Format (DMMF) for Saola ORM"
keywords = ["dmmf", "schema", "orm", "metadata"]

[dependencies]
bigdecimal.workspace = true
itertools.workspace = true
psl.workspace = true
serde.workspace = true
serde_json.workspace = true
schema.workspace = true
indexmap = { workspace = true, features = ["serde"] }
query-structure = { workspace = true, features = [
    "default_generators",
] }

[dev-dependencies]
expect-test.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
flate2.workspace = true
similar = { workspace = true, features = ["text", "inline", "bytes"] }
colored.workspace = true
itertools.workspace = true
