[package]
edition.workspace = true
name = "saola-query-structure"
version = "0.1.0"

[dependencies]
psl.workspace = true
itertools.workspace = true
prisma-value.workspace = true
bigdecimal.workspace = true
thiserror.workspace = true
telemetry = { workspace = true, optional = true }

getrandom = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
cuid1 = { workspace = true, optional = true }
cuid2 = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
nanoid = { workspace = true, optional = true }
chrono.workspace = true
indexmap.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[features]
# Support for generating default UUID, CUID, ULID, nanoid and datetime values.
default_generators = ["uuid/v4", "uuid/v7", "cuid1", "cuid2", "ulid", "nanoid"]
telemetry = ["dep:telemetry"]
