[package]
name = "saola-query-schema"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema builder for the Saola query engine"
keywords = ["schema", "query-engine", "orm", "builder"]

[dependencies]
query-structure.workspace = true
psl.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
codspeed-criterion-compat.workspace = true

[[bench]]
name = "schema_builder_bench"
harness = false

[features]
all_connectors = ["psl/all"]
